# CostInstrument-llvm

./: .clang-format  CMakeLists.txt  README.md
include/: DynamicHooks.h  InstrumentPass.h  NameBlacklist.h
lib/: CMakeLists.txt
lib/Instrument/: CMakeLists.txt  DynamicHooks.cpp  InstrumentPass.cpp  NameBlacklist.cpp
lib/Runtime/: CMakeLists.txt  Hooks.c
tool/: CMakeLists.txt
tool/clang-instr/: CMakeLists.txt  clang-instr.py.in
tool/llvm-instr/: CMakeLists.txt  LLVMUtil.cpp  LLVMUtil.h  llvm-instr.cpp
